src/objects/TR1__External_Search_Status__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Challenge__c</fullName>
        <label>Challenge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ExternalSearch__c</fullName>
        <label>External Search</label>
        <referenceTo>TR1__ExternalSearch__c</referenceTo>
        <relationshipLabel>External Search Status</relationshipLabel>
        <relationshipName>External_Search_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Handle__c</fullName>
        <label>Handle</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Image_Code__c</fullName>
        <label>Text in Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Image_Url__c</fullName>
        <label>Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_Code__c</fullName>
        <label>Job Board Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Board</label>
        <referenceTo>TR1__Job_Board__c</referenceTo>
        <relationshipLabel>External Search Status</relationshipLabel>
        <relationshipName>External_Search_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>working</fullName>
                </value>
                <value>
                    <fullName>finished</fullName>
                </value>
                <value>
                    <fullName>error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Search Status</label>
    <nameField>
        <displayFormat>ESS-{0000000000}</displayFormat>
        <label>External Search Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Search Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>